# bibliophage

./: README.md  Tiltfile  docker-compose.yaml
api/bibliophage/v1alpha2/: common.proto  document.proto  pdf.proto
docker/postgres-pgvector/: init-pgvector.sh
docs/: api-evolution.md  api-usage.md  data_cleaning.md  db-access.md
docs/dev/: tests.md
python-server/: .env.example  batch_size_calculator.py  config.py  database.py  docling_batched.py  document_service_implementation.py  loading_service_implementation.py  pixi.toml  pyproject.toml  ruff.toml  server.py
python-server/bibliophage/v1alpha2/: common_pb2.py  common_pb2.pyi  document_connect.py  document_pb2.py  document_pb2.pyi  pdf_connect.py  pdf_pb2.py  pdf_pb2.pyi
python-server/src/: batch_size_calculator.py  config.py  database.py  docling_batched.py  loading_service_implementation.py  pdf_outline_inspector.py
python-server/src/bibliophage/v1alpha2/: common_pb2.pyi  document_connect.py  document_pb2.py  pdf_pb2.pyi
python-server/tests/: conftest.py  test_docling_batched.py  test_document_service.py  test_pdf_service.py
web-ui/: package.json
web-ui/src/bibliophage/v1alpha2/: common_pb.ts  document_connect.ts  document_pb.ts  pdf_connect.ts  pdf_pb.ts
web-ui/src/components/: Sidebar.vue  TextEditor.vue  TextEditorCard.vue
web-ui/src/views/: Journal.vue  PdfUpload.vue
