[project]
name = "bibliophage-data-server"
version = "0.1.0"
description = "Bibliophage data server"
authors = [
    {name = "Leon Welchert", email = "lichturm@posteo.de"}
]
requires-python = ">=3.13.9,<3.14"
dependencies = [
    "langchain-community>=0.3.31,<0.4",
    "langchain>=0.3.27,<0.4",
    "langchain-core>=0.3.79,<0.4",
    "connect-python>=0.5.0,<0.6",
    "protoc-gen-connect-python>=0.5.0,<0.6",
    "ty>=0.0.1a32,<0.0.1a33",
    "deptry>=0.24.0,<0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.13.9,<3.14"
langchain-postgres = ">=0.0.15,<0.0.16"
langchain-huggingface = ">=0.3.1,<0.4"
pypdf = ">=6.1.3,<7"
grpcio = "==1.71.0"
grpcio-tools = "==1.71.0"
grpcio-reflection = "==1.71.0"
fastapi = ">=0.121.2,<0.122"
uvicorn = ">=0.38.0,<0.39"
ruff = ">=0.14.8,<0.15"
pytest = ">=8.3.0,<9"
pytest-asyncio = ">=0.25.0,<1"
pydantic-settings = ">=2.0.0,<3"
python-dotenv = ">=1.0.0,<2"

[tool.pixi.pypi-dependencies]
langchain-community = ">=0.3.31,<0.4"
langchain = ">=0.3.27,<0.4"
langchain-core = ">=0.3.79,<0.4"
connect-python = ">=0.5.0,<0.6"
protoc-gen-connect-python = ">=0.5.0,<0.6"
ty = ">=0.0.1a32,<0.0.1a33"
deptry = ">=0.24.0,<0.25"

[tool.pixi.tasks.dev]
cmd = ["./server-runscript.sh"]

[tool.pixi.tasks.gen_proto]
cmd = [
    "python", "-m", "grpc_tools.protoc",
    "--proto_path=../api",
    "--connect-python_out=./",
    "--python_out=./",
    "--pyi_out=./",
    "../api/bibliophage/v1alpha2/*.proto"
]
description = "Generate protobuf code"

[tool.pixi.tasks.touch_inits]
cmd = [
    "touch",
    "bibliophage/__init__.py",
    "bibliophage/v1alpha1/__init__.py",
    "bibliophage/v1alpha2/__init__.py"
]
description = "Create __init__.py files"

[tool.pixi.tasks.api]
depends-on = ["gen_proto", "touch_inits"]

[tool.pixi.tasks.lint]
depends-on = ["ruff", "ty"]

[tool.pixi.tasks.ruff]
cmd = ["ruff", "check", "--select", "ALL"]

[tool.pixi.tasks.ty]
cmd = ["ty", "check"]

[tool.ruff]
select = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
