[project]
name = "bibliophage-data-server"
version = "0.1.0"
description = "Bibliophage data server"
authors = [
    {name = "Leon Welchert", email = "lichturm@posteo.de"}
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.4"

[tool.pixi.dependencies]
python = ">=3.12"
langchain-postgres = ">=0.0.15,<0.0.16"
langchain-huggingface = ">=0.3.1,<0.4"
pypdf = ">=6.4.1,<7"
grpcio = ">=1.73.1,<2"
grpcio-tools = ">=1.73.1,<2"
grpcio-reflection = ">=1.45.0,<2"
fastapi = ">=0.124.0,<0.125"
uvicorn = ">=0.38.0,<0.39"
ruff = ">=0.14.8,<0.15"
pytest = ">=9.0.2,<10"
pytest-asyncio = ">=1.3.0,<2"
pydantic-settings = ">=2.12.0,<3"
python-dotenv = ">=1.2.1,<2"
vulture = ">=2.14,<3"
pytorch = ">=2.9.1,<3"
pymupdf = ">=1.26.1,<2"
docling = ">=2.45.0,<3"

[tool.pixi.pypi-dependencies]
langchain-community = ">=0.3.31, <0.4"
langchain = ">=0.3.27, <0.4"
langchain-core = "*"
connect-python = ">=0.6.0, <0.7"
protoc-gen-connect-python = ">=0.6.0, <0.7"
ty = ">=0.0.1a32, <0.0.1a33"
deptry = ">=0.24.0, <0.25"

[tool.pixi.tasks.dev]
cmd = ["uvicorn",
        "--reload",
        "server:api_server",
]
env = {VECTOR_DB_URL = 'postgresql+psycopg://pgvector:pgvector_dev@localhost:5432/pgvector', DOC_DB_URL = 'mongodb://localhost:27017/'}

[tool.pixi.tasks.gen_proto]
cmd = [
    "python", "-m", "grpc_tools.protoc",
    "--proto_path=../api",
    "--connect-python_out=./",
    "--python_out=./",
    "--pyi_out=./",
    "../api/bibliophage/v1alpha2/*.proto"
]
description = "Generate protobuf code"

[tool.pixi.tasks.touch_inits]
cmd = [
    "touch",
    "bibliophage/__init__.py",
    "bibliophage/v1alpha1/__init__.py",
    "bibliophage/v1alpha2/__init__.py"
]
description = "Create __init__.py files"

[tool.pixi.tasks.api]
depends-on = ["gen_proto", "touch_inits"]

[tool.pixi.tasks.lint]
depends-on = ["linter", "types", "deps", "ded"]

[tool.pixi.tasks.linter]
cmd = ["ruff", "check", "--select", "ALL"]

[tool.pixi.tasks.types]
cmd = ["ty", "check"]

[tool.pixi.tasks.deps]
cmd = ["deptry", "."]

[tool.pixi.tasks.ded]
cmd = ["vulture", ".", "--exclude", "bibliophage,.pixi,.mypy_cache,__pycache__,__pytest_cache,.ruff_cache"]

[tool.ruff]
select = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
